#143 Raise java compatibility level to 1.8